--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
     color: var(--text-light);
   }
 
+  .card-img-top {
+    height: 200px;
+    object-fit: cover;
+}
+
+
   .btn {
     transition: all 0.3s ease;
     font-weight: 500;
@@ -150,9 +156,24 @@
 <body>
 
 <!-- Navbar -->
+<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
   <div class="container">
+    <!-- Left side social media links -->
+    <ul class="navbar-nav me-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="https://www.linkedin.com/in/svetozar-stojkov-sr11/" target="_blank">
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://github.com/StojkovSR11" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+      </li>
+    </ul>
 
+    <!-- Right side menu -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -167,6 +188,7 @@
     </div>
   </div>
 </nav>
+
 
 <!-- Hero -->
 <section class="hero" id="hero">
