--- a/index.html
+++ b/index.html
@@ -156,7 +156,6 @@
 <body>
 
 <!-- Navbar -->
-<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
   <div class="container">
     <!-- Left side social media links -->
@@ -253,9 +252,9 @@
         <div class="card project-card h-100">
           <img src="Meowscape.png" class="card-img-top" alt="Project 1">
           <div class="card-body">
-            <h5 class="card-title">Project Management Platform</h5>
-            <p class="card-text">A scalable microservices-based project/task management system built with Go, Angular, Docker, and NoSQL.</p>
-            <a href="#" class="btn btn-outline-primary btn-sm">View Details</a>
+            <h5 class="card-title">Meowscape</h5>
+            <p class="card-text">Can you outsmart your opponent and claim victory? Goofy turn based strategy game made in JS.</p>
+            <a href="https://meowscape.onrender.com/" class="btn btn-outline-primary btn-sm">Play</a>
           </div>
         </div>
       </div>
@@ -264,23 +263,13 @@
         <div class="card project-card h-100">
           <img src="SpaceTrouble.png" class="card-img-top" alt="Project 2">
           <div class="card-body">
-            <h5 class="card-title">Real-Time Chat App</h5>
-            <p class="card-text">WebSocket and gRPC-based real-time chat with user authentication and chat history in MongoDB.</p>
-            <a href="#" class="btn btn-outline-primary btn-sm">View Details</a>
+            <h5 class="card-title">Space Trouble</h5>
+            <p class="card-text">Use evasive maneuvers to dodge incoming fire while staying on the offensive. Space shooter game made in JS. </p>
+            <a href="https://spacetrouble.onrender.com/" class="btn btn-outline-primary btn-sm">Play</a>
           </div>
         </div>
       </div>
 
-      <div class="col-md-4">
-        <div class="card project-card h-100">
-          <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Project 3">
-          <div class="card-body">
-            <h5 class="card-title">DevOps Pipeline</h5>
-            <p class="card-text">Fully automated CI/CD pipeline using GitHub Actions, Docker Hub, and Kubernetes deployments.</p>
-            <a href="#" class="btn btn-outline-primary btn-sm">View Details</a>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </section>
