--- a/index.html
+++ b/index.html
@@ -18,138 +18,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <!-- Custom Styles -->
-  <style>
-  :root {
-    --bg-dark: #0d1117;
-    --bg-section: #161b22;
-    --text-light: #c9d1d9;
-    --primary: #58a6ff;
-    --accent: #f9826c;
-  }
-
-  body {
-    font-family: 'Poppins', sans-serif;
-    background-color: var(--bg-dark);
-    color: var(--text-light);
-    scroll-behavior: smooth;
-  }
-
-  h1, h2, h3, .navbar-brand {
-    font-family: 'JetBrains Mono', monospace;
-    color: #fff;
-  }
-
-  .navbar {
-    background-color: var(--bg-section);
-    box-shadow: 0 2px 4px rgba(0,0,0,0.5);
-  }
-
-  .navbar .nav-link {
-    color: var(--text-light);
-  }
-
-  .navbar .nav-link:hover {
-    color: var(--primary);
-  }
-
-  .hero {
-    background: linear-gradient(135deg, #1f6feb, #8b5cf6);
-    color: white;
-    padding: 120px 0;
-    text-align: center;
-    position: relative;
-  }
-
-  .hero img {
-  width: 160px;
-  height: 160px;
-  object-fit: cover;
-  border-radius: 50%;
-  border: 5px solid #fff;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-}
-
-  section {
-    background-color: var(--bg-dark);
-  }
-
-  .bg-light, .bg-white {
-    background-color: var(--bg-section) !important;
-  }
-
-  .card {
-    background-color: var(--bg-section);
-    border: none;
-    color: var(--text-light);
-  }
-
-  .card-img-top {
-    height: 200px;
-    object-fit: cover;
-}
-
-
-  .btn {
-    transition: all 0.3s ease;
-    font-weight: 500;
-  }
-
-  .btn-primary {
-    background-color: var(--primary);
-    border: none;
-  }
-
-  .btn-primary:hover {
-    background-color: #1f6feb;
-    box-shadow: 0 0 10px var(--primary);
-  }
-
-  .btn-outline-primary {
-    color: var(--primary);
-    border-color: var(--primary);
-  }
-
-  .btn-outline-primary:hover {
-    background-color: var(--primary);
-    color: #fff;
-  }
-
-  .form-control {
-    background-color: #0d1117;
-    border: 1px solid #30363d;
-    color: #fff;
-  }
-
-  .form-control:focus {
-    background-color: #161b22;
-    color: #fff;
-    border-color: var(--primary);
-    box-shadow: 0 0 0 0.2rem rgba(88, 166, 255, 0.25);
-  }
-
-  .progress {
-    background-color: #30363d;
-    height: 25px;
-  }
-
-  .progress-bar {
-    background-color: var(--primary);
-  }
-
-  footer {
-    background: #010409;
-    color: #8b949e;
-    padding: 30px 0;
-  }
-
-  footer a {
-    color: var(--primary);
-  }
-
-  footer a:hover {
-    color: #fff;
-  }
-</style>
+  <link href="styles.css" rel="stylesheet">
 
 </head>
 
@@ -329,44 +198,7 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-
-<script>
-  AOS.init();
-
-  // Navbar background on scroll
-  window.addEventListener('scroll', () => {
-    const nav = document.querySelector('.navbar');
-    nav.classList.toggle('scrolled', window.scrollY > 50);
-  });
-
-  // GSAP entrance animation
-  gsap.from(".hero img", {
-    opacity: 0,
-    y: -50,
-    duration: 1.2,
-    delay: 0.2
-  });
-
-  gsap.from(".hero .lead", {
-    opacity: 0,
-    y: 30,
-    duration: 1.2,
-    delay: 0.6
-  });
-
-  gsap.utils.toArray(".project-card").forEach((card, i) => {
-    gsap.from(card, {
-      opacity: 0,
-      y: 50,
-      duration: 0.8,
-      delay: i * 0.2,
-      scrollTrigger: {
-        trigger: card,
-        start: "top 85%",
-      }
-    });
-  });
-</script>
+<script src="scripts.js"></script>
 
 </body>
 </html>
