--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
   <div class="container">
     <!-- Left side social media links -->
-    <ul class="navbar-nav me-auto">
+    <ul class="navbar-nav me-auto d-flex flex-row">
       <li class="nav-item">
         <a class="nav-link" href="https://www.linkedin.com/in/svetozar-stojkov-sr11/" target="_blank">
-          <i class="fab fa-linkedin"></i>
+          <i class="fab fa-linkedin me-2"></i>
         </a>
       </li>
       <li class="nav-item">
@@ -56,6 +56,8 @@
     </div>
   </div>
 </nav>
+
+
 
 
 
