--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top d-none d-lg-block">
   <div class="container">
     <!-- Left side social media links -->
     <ul class="navbar-nav me-auto d-flex flex-row">
@@ -56,9 +56,6 @@
     </div>
   </div>
 </nav>
-
-
-
 
 
 <!-- Hero -->
@@ -189,6 +186,11 @@
   </div>
 </footer>
 
+<!-- Back to Top Button -->
+<button id="backToTop" class="btn btn-primary" title="Go to top">
+  <i class="fas fa-arrow-up"></i>
+</button>
+
 <!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -200,6 +202,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 <script src="scripts.js"></script>
+
+
+
 
 </body>
 </html>
