--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
   <div class="container" data-aos="fade-up">
     <h2 class="mb-4">Projects</h2>
     <div class="row g-4">
+      
       <div class="col-md-4">
         <div class="card project-card h-100">
           <img src="Meowscape.png" class="card-img-top" alt="Project 1">
@@ -124,6 +125,8 @@
             <h5 class="card-title">Meowscape</h5>
             <p class="card-text">Can you outsmart your opponent and claim victory? Goofy turn based strategy game made in JS.</p>
             <a href="https://meowscape.onrender.com/" class="btn btn-outline-primary btn-sm">Play</a>
+            <!-- New bottom image -->
+            <img src="MeowTech.png" class="card-img-bottom" alt="Bottom Image 1">
           </div>
         </div>
       </div>
@@ -135,6 +138,8 @@
             <h5 class="card-title">Space Trouble</h5>
             <p class="card-text">Use evasive maneuvers to dodge incoming fire while staying on the offensive. Space shooter game made in JS. </p>
             <a href="https://spacetrouble.onrender.com/" class="btn btn-outline-primary btn-sm">Play</a>
+            <!-- New bottom image -->
+            <img src="SpaceTech.png" class="card-img-bottom" alt="Bottom Image 2">
           </div>
         </div>
       </div>
@@ -142,6 +147,7 @@
     </div>
   </div>
 </section>
+
 
 <!-- Resume -->
 <section id="resume" class="bg-light py-5">
