--- a/index.html
+++ b/index.html
@@ -153,8 +153,15 @@
 <section id="resume" class="bg-light py-5">
   <div class="container" data-aos="fade-up">
     <h2 class="mb-4">Resume</h2>
-    <p>Download my latest resume in PDF format:</p>
-    <a href="CV Svetozar Stojkov ENG.pdf" class="btn btn-primary" download><i class="fa fa-download me-2"></i>Download Resume</a>
+    <p>View or download my latest resume:</p>
+    <div class="d-flex gap-3 flex-wrap">
+    <a href="CV Svetozar Stojkov ENG.pdf" target="_blank" class="btn btn-outline-primary">
+    <i class="fa fa-eye me-2"></i>View Resume
+    </a>
+    <a href="CV Svetozar Stojkov ENG.pdf" class="btn btn-primary" download>
+    <i class="fa fa-download me-2"></i>Download Resume
+    </a>
+    </div>
   </div>
 </section>
 
