--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
             <h5 class="card-title">Meowscape</h5>
             <p class="card-text">Can you outsmart your opponent and claim victory? Goofy turn based strategy game made in JS.</p>
             <a href="https://meowscape.onrender.com/" class="btn btn-outline-primary btn-sm">Play</a>
+            <a href="https://github.com/StojkovSR11/meowscape" class="btn btn-outline-primary btn-sm">Github</a>
+
             <!-- New bottom image -->
             <img src="MeowTech.png" class="card-img-bottom" alt="Bottom Image 1">
           </div>
@@ -138,11 +140,52 @@
             <h5 class="card-title">Space Trouble</h5>
             <p class="card-text">Use evasive maneuvers to dodge incoming fire while staying on the offensive. Space shooter game made in JS. </p>
             <a href="https://spacetrouble.onrender.com/" class="btn btn-outline-primary btn-sm">Play</a>
+            <a href="https://github.com/StojkovSR11/SpaceTrouble" class="btn btn-outline-primary btn-sm">Github</a>
             <!-- New bottom image -->
             <img src="SpaceTech.png" class="card-img-bottom" alt="Bottom Image 2">
           </div>
         </div>
       </div>
+
+            <div class="col-md-4">
+        <div class="card project-card h-100">
+          <img src="Taskio.png" class="card-img-top" alt="Project 2">
+          <div class="card-body">
+            <h5 class="card-title">Taskio</h5>
+            <p class="card-text">Use evasive maneuvers to dodge incoming fire while staying on the offensive. Space shooter game made in JS. </p>
+            <a href="https://github.com/StojkovSR11/Taskio" class="btn btn-outline-primary btn-sm">Github</a>
+            <!-- New bottom image -->
+            <img src="TaskTech.png" class="card-img-bottom" alt="Bottom Image 2">
+          </div>
+        </div>
+      </div>
+
+            <div class="col-md-4">
+        <div class="card project-card h-100">
+          <img src="Gea.jpg" class="card-img-top" alt="Project 2">
+          <div class="card-body">
+            <h5 class="card-title">Gea</h5>
+            <p class="card-text">Use evasive maneuvers to dodge incoming fire while staying on the offensive. Space shooter game made in JS. </p>
+            <a href="https://gitlab.com/stojkov.sr11/wp" class="btn btn-outline-primary btn-sm">Github</a>
+            <!-- New bottom image -->
+            <img src="GeaTech.png" class="card-img-bottom" alt="Bottom Image 2">
+          </div>
+        </div>
+      </div>
+
+            <div class="col-md-4">
+        <div class="card project-card h-100">
+          <img src="Sitpass.jpg" class="card-img-top" alt="Project 2">
+          <div class="card-body">
+            <h5 class="card-title">Sitpass</h5>
+            <p class="card-text">Use evasive maneuvers to dodge incoming fire while staying on the offensive. Space shooter game made in JS. </p>
+            <a href="https://github.com/StojkovSR11/Client-Server-Web-Technologies" class="btn btn-outline-primary btn-sm">Github</a>
+            <!-- New bottom image -->
+            <img src="SitTech.png" class="card-img-bottom" alt="Bottom Image 2">
+          </div>
+        </div>
+      </div>
+      
 
     </div>
   </div>
