--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <img src="Meowscape.png" class="card-img-top" alt="Project 1">
           <div class="card-body">
             <h5 class="card-title">Meowscape</h5>
-            <p class="card-text">Can you outsmart your opponent and claim victory? Goofy turn based strategy game made in JS.</p>
+            <p class="card-text">Can you outsmart your opponent and claim victory? Goofy turn based strategy game.</p>
             <a href="https://meowscape.onrender.com/" class="btn btn-outline-primary btn-sm">Play</a>
             <a href="https://github.com/StojkovSR11/meowscape" class="btn btn-outline-primary btn-sm">Github</a>
 
@@ -138,7 +138,7 @@
           <img src="SpaceTrouble.png" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title">Space Trouble</h5>
-            <p class="card-text">Use evasive maneuvers to dodge incoming fire while staying on the offensive. Space shooter game made in JS. </p>
+            <p class="card-text">Use evasive maneuvers to dodge incoming fire while staying on the offensive. Fast-paced space shooter game.</p>
             <a href="https://spacetrouble.onrender.com/" class="btn btn-outline-primary btn-sm">Play</a>
             <a href="https://github.com/StojkovSR11/SpaceTrouble" class="btn btn-outline-primary btn-sm">Github</a>
             <!-- New bottom image -->
@@ -152,7 +152,7 @@
           <img src="Taskio.png" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title">Taskio</h5>
-            <p class="card-text">Use evasive maneuvers to dodge incoming fire while staying on the offensive. Space shooter game made in JS. </p>
+            <p class="card-text">A full-featured project management platform for organizing projects, tasks, and team collaboration.</p>
             <a href="https://github.com/StojkovSR11/Taskio" class="btn btn-outline-primary btn-sm">Github</a>
             <!-- New bottom image -->
             <img src="TaskTech.png" class="card-img-bottom" alt="Bottom Image 2">
@@ -165,7 +165,7 @@
           <img src="Gea.jpg" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title">Gea</h5>
-            <p class="card-text">Use evasive maneuvers to dodge incoming fire while staying on the offensive. Space shooter game made in JS. </p>
+            <p class="card-text">A travel agency web app that enables users to explore destinations and manage travel bookings easily.</p>
             <a href="https://gitlab.com/stojkov.sr11/wp" class="btn btn-outline-primary btn-sm">Github</a>
             <!-- New bottom image -->
             <img src="GeaTech.png" class="card-img-bottom" alt="Bottom Image 2">
@@ -178,7 +178,7 @@
           <img src="Sitpass.jpg" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title">Sitpass</h5>
-            <p class="card-text">Use evasive maneuvers to dodge incoming fire while staying on the offensive. Space shooter game made in JS. </p>
+            <p class="card-text">A fitness tracking app designed to support users in monitoring their workouts and fitness goals.</p>
             <a href="https://github.com/StojkovSR11/Client-Server-Web-Technologies" class="btn btn-outline-primary btn-sm">Github</a>
             <!-- New bottom image -->
             <img src="SitTech.png" class="card-img-bottom" alt="Bottom Image 2">
