--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <!-- Custom Styles -->
   <link href="styles.css" rel="stylesheet">
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+
+
 </head>
 
 <body>
@@ -76,40 +79,73 @@
    </div>
 </section>
 
-<!-- Skills -->
+
+<!-- Skills Section -->
 <section id="skills" class="bg-light py-5">
   <div class="container" data-aos="fade-up">
-    <h2 class="mb-4">Skills</h2>
-    <div class="row">
-      <div class="col-md-6">
-        <h6>Go (Golang)</h6>
-        <div class="progress mb-3"><div class="progress-bar" style="width: 85%">85%</div></div>
-
-        <h6>Angular</h6>
-        <div class="progress mb-3"><div class="progress-bar bg-success" style="width: 80%">80%</div></div>
-
-        <h6>JavaScript / HTML5 / CSS</h6>
-        <div class="progress mb-3"><div class="progress-bar bg-warning" style="width: 80%">80%</div></div>
-
-        <h6>Java / Spring MVC / Hibernate</h6>
-        <div class="progress mb-3"><div class="progress-bar bg-danger" style="width: 75%">75%</div></div>
+    <h2 class="mb-5 text-center">Skills</h2>
+    <div class="row g-4">
+      <!-- Skill Card -->
+      <div class="col-6 col-md-4 col-lg-3">
+        <div class="bg-white text-center p-4 shadow-sm rounded hover-shadow">
+          <i class="devicon-go-original colored fs-1 mb-2"></i>
+          <img src="go.png" alt="Go" style="width:60px; height:auto;" class="mb-2">
+          <h6 class="mt-2">Go (Golang)</h6>
+        </div>
       </div>
-      <div class="col-md-6">
-        <h6>C#</h6>
-        <div class="progress mb-3"><div class="progress-bar bg-secondary" style="width: 65%">65%</div></div>
+      <div class="col-6 col-md-4 col-lg-3">
+        <div class="bg-white text-center p-4 shadow-sm rounded hover-shadow">
+          <i class="devicon-angularjs-plain colored fs-1 mb-2"></i>
+          <h6 class="mt-2">Angular</h6>
+        </div>
+      </div>
+      <div class="col-6 col-md-4 col-lg-3">
+        <div class="bg-white text-center p-4 shadow-sm rounded hover-shadow">
+          <i class="devicon-javascript-plain colored fs-1 mb-1"></i>
+          <i class="devicon-html5-plain colored fs-1 mb-1"></i>
+          <i class="devicon-css3-plain colored fs-1 mb-1"></i>
+          <h6 class="mt-2">JS / HTML5 / CSS</h6>
+        </div>
+      </div>
+      <div class="col-6 col-md-4 col-lg-3">
+        <div class="bg-white text-center p-4 shadow-sm rounded hover-shadow">
+          <i class="devicon-java-plain colored fs-1 mb-2"></i>
+          <h6 class="mt-2">Java / Spring / Hibernate</h6>
+        </div>
+      </div>
 
-        <h6>SQL Server / MySQL</h6>
-        <div class="progress mb-3"><div class="progress-bar" style="width: 70%">70%</div></div>
-
-        <h6>MongoDB / Cassandra</h6>
-        <div class="progress mb-3"><div class="progress-bar bg-info" style="width: 65%">65%</div></div>
-
-        <h6>Git / Docker</h6>
-        <div class="progress mb-3"><div class="progress-bar bg-primary" style="width: 75%">75%</div></div>
+      <div class="col-6 col-md-4 col-lg-3">
+        <div class="bg-white text-center p-4 shadow-sm rounded hover-shadow">
+          <i class="devicon-csharp-plain colored fs-1 mb-2"></i>
+          <h6 class="mt-2">C#</h6>
+        </div>
+      </div>
+      <div class="col-6 col-md-4 col-lg-3">
+        <div class="bg-white text-center p-4 shadow-sm rounded hover-shadow">
+          <i class="devicon-mysql-plain colored fs-1 mb-1"></i>
+          <i class="devicon-microsoftsqlserver-plain colored fs-1 mb-1"></i>
+          <h6 class="mt-2">MySQL / SQL Server</h6>
+        </div>
+      </div>
+      <div class="col-6 col-md-4 col-lg-3">
+        <div class="bg-white text-center p-4 shadow-sm rounded hover-shadow">
+          <i class="devicon-mongodb-plain colored fs-1 mb-1"></i>
+          <i class="devicon-apachecassandra-plain colored fs-1 mb-1"></i>
+          <h6 class="mt-2">MongoDB / Cassandra</h6>
+        </div>
+      </div>
+      <div class="col-6 col-md-4 col-lg-3">
+        <div class="bg-white text-center p-4 shadow-sm rounded hover-shadow">
+          <i class="devicon-git-plain colored fs-1 mb-1"></i>
+          <i class="devicon-docker-plain colored fs-1 mb-1"></i>
+          <h6 class="mt-2">Git / Docker</h6>
+        </div>
       </div>
     </div>
   </div>
 </section>
+
+
 
 
 <!-- Projects -->
