--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Junior Software Engineer Portfolio</title>
+  <title>Svetozar Stojkov - Software Engineer Portfolio</title>
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -51,9 +51,9 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
         <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
         <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-        <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
       </ul>
     </div>
@@ -66,7 +66,7 @@
   <div class="container" data-aos="zoom-in">
     <img src="profile.png" class="mb-4" alt="Your Photo">
     <h1 class="display-4">Svetozar Stojkov</h1>
-    <p class="lead">Junior Software Engineer</p>
+    <p class="lead">Software Engineer</p>
     <a href="#contact" class="btn btn-outline-light btn-lg mt-3">Get in Touch</a>
   </div>
 </section>
@@ -75,31 +75,59 @@
 <section id="about" class="py-5">
    <div class="container" data-aos="fade-up">
     <h2 class="mb-4">About Me</h2>
-    <h5>I’m a final-year software engineering student with a strong passion for software development and building practical projects. My goal is to gain hands-on experience, grow as a developer, and contribute to real-world solutions.</h5>
+    <h5>I’m a software engineer focused on improving my skills and growing through real-world experience. I enjoy working in teams, learning from others, and contributing to projects where I can make a difference. I’m always looking for opportunities to tackle new challenges and expand my knowledge.</h5>
    </div>
 </section>
 
+
+<!-- Experience -->
+<section id="experience" class="bg-light py-5">
+  <div class="container" data-aos="fade-up">
+    <h2 class="mb-4">Professional Experience</h2>
+    <div class="card mb-3">
+      <div class="card-body">
+        <div class="d-flex justify-content-between align-items-start mb-3">
+          <div>
+            <h4 class="card-title mb-1">Software Engineer</h4>
+            <h5 class="text-primary">Vega IT</h5>
+          </div>
+          <span class="badge bg-primary">06/2025 – Present</span>
+        </div>
+        <p class="mb-2"><i class="fas fa-map-marker-alt me-2"></i>Novi Sad</p>
+        <ul class="mt-3">
+          <li>Contributed to the development of a shared Angular UI component library using an Nx monorepo</li>
+          <p></p>
+          <li>Contributed to setup, run, and build scripts to automate and simplify the development and deployment process</li>
+          <p></p>
+          <li>Implemented AWS S3 bucket integration to store and serve application assets, improving deployment efficiency</li>
+          <p></p>
+          <li>Worked closely with teammates to implement and improve Angular components, focusing on clean structure and reusability</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- Skills Section -->
 <section id="skills" class="bg-light py-5">
   <div class="container" data-aos="fade-up">
     <h2 class="mb-5 text-center">Skills</h2>
-    <div class="row g-4">
+    <div class="row g-4 justify-content-center">
       <!-- Skill Card -->
-      <div class="col-6 col-md-4 col-lg-3">
+      <div class="col-6 col-md-4" style="flex: 0 0 20%; max-width: 20%;">
         <div class="bg-white text-center p-4 shadow-sm rounded hover-shadow">
           <i class="devicon-go-original colored fs-1 mb-2"></i>
           <img src="go.png" alt="Go" style="width:60px; height:auto;" class="mb-2">
           <h6 class="mt-2">Go (Golang)</h6>
         </div>
       </div>
-      <div class="col-6 col-md-4 col-lg-3">
+      <div class="col-6 col-md-4" style="flex: 0 0 20%; max-width: 20%;">
         <div class="bg-white text-center p-4 shadow-sm rounded hover-shadow">
           <i class="devicon-angularjs-plain colored fs-1 mb-2"></i>
           <h6 class="mt-2">Angular</h6>
         </div>
       </div>
-      <div class="col-6 col-md-4 col-lg-3">
+      <div class="col-6 col-md-4" style="flex: 0 0 20%; max-width: 20%;">
         <div class="bg-white text-center p-4 shadow-sm rounded hover-shadow">
           <i class="devicon-javascript-plain colored fs-1 mb-1"></i>
           <i class="devicon-html5-plain colored fs-1 mb-1"></i>
@@ -107,38 +135,50 @@
           <h6 class="mt-2">JS / HTML5 / CSS</h6>
         </div>
       </div>
-      <div class="col-6 col-md-4 col-lg-3">
+      <div class="col-6 col-md-4" style="flex: 0 0 20%; max-width: 20%;">
         <div class="bg-white text-center p-4 shadow-sm rounded hover-shadow">
           <i class="devicon-java-plain colored fs-1 mb-2"></i>
           <h6 class="mt-2">Java / Spring / Hibernate</h6>
         </div>
       </div>
-
-      <div class="col-6 col-md-4 col-lg-3">
+      <div class="col-6 col-md-4" style="flex: 0 0 20%; max-width: 20%;">
         <div class="bg-white text-center p-4 shadow-sm rounded hover-shadow">
           <i class="devicon-csharp-plain colored fs-1 mb-2"></i>
           <h6 class="mt-2">C#</h6>
         </div>
       </div>
-      <div class="col-6 col-md-4 col-lg-3">
+
+      <div class="col-6 col-md-4" style="flex: 0 0 20%; max-width: 20%;">
         <div class="bg-white text-center p-4 shadow-sm rounded hover-shadow">
           <i class="devicon-mysql-plain colored fs-1 mb-1"></i>
           <i class="devicon-microsoftsqlserver-plain colored fs-1 mb-1"></i>
           <h6 class="mt-2">MySQL / SQL Server</h6>
         </div>
       </div>
-      <div class="col-6 col-md-4 col-lg-3">
+      <div class="col-6 col-md-4" style="flex: 0 0 20%; max-width: 20%;">
         <div class="bg-white text-center p-4 shadow-sm rounded hover-shadow">
           <i class="devicon-mongodb-plain colored fs-1 mb-1"></i>
           <i class="devicon-apachecassandra-plain colored fs-1 mb-1"></i>
           <h6 class="mt-2">MongoDB / Cassandra</h6>
         </div>
       </div>
-      <div class="col-6 col-md-4 col-lg-3">
+      <div class="col-6 col-md-4" style="flex: 0 0 20%; max-width: 20%;">
         <div class="bg-white text-center p-4 shadow-sm rounded hover-shadow">
           <i class="devicon-git-plain colored fs-1 mb-1"></i>
           <i class="devicon-docker-plain colored fs-1 mb-1"></i>
           <h6 class="mt-2">Git / Docker</h6>
+        </div>
+      </div>
+      <div class="col-6 col-md-4" style="flex: 0 0 20%; max-width: 20%;">
+        <div class="bg-white text-center p-4 shadow-sm rounded hover-shadow">
+          <i class="devicon-amazonwebservices-plain-wordmark colored fs-1 mb-2"></i>
+          <h6 class="mt-2">AWS</h6>
+        </div>
+      </div>
+      <div class="col-6 col-md-4" style="flex: 0 0 20%; max-width: 20%;">
+        <div class="bg-white text-center p-4 shadow-sm rounded hover-shadow">
+          <i class="devicon-firebase-plain colored fs-1 mb-2"></i>
+          <h6 class="mt-2">Firebase</h6>
         </div>
       </div>
     </div>
@@ -227,22 +267,6 @@
   </div>
 </section>
 
-
-<!-- Resume -->
-<section id="resume" class="bg-light py-5">
-  <div class="container" data-aos="fade-up">
-    <h2 class="mb-4">Resume</h2>
-    <p>View or download my latest resume:</p>
-    <div class="d-flex gap-3 flex-wrap">
-    <a href="CV Svetozar Stojkov ENG.pdf" target="_blank" class="btn btn-outline-primary">
-    <i class="fa fa-eye me-2"></i>View Resume
-    </a>
-    <a href="CV Svetozar Stojkov ENG.pdf" class="btn btn-primary" download>
-    <i class="fa fa-download me-2"></i>Download Resume
-    </a>
-    </div>
-  </div>
-</section>
 
 <!-- Contact -->
 <section id="contact" class="py-5">
